--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,335 @@
 *{
     margin: 0;
+    padding: 0;
+}
+
+header {
+	background-image: url(../img/somospeqherois.png);
+	padding: 30px 0;
+	height: 60px;
+	top: 50%;
+}
+
+
+.tittle-header {
+	background-color: white;
+	border-radius: 40px;
+	box-shadow: 10px 5px 5px rgb(75, 62, 151);
+	font-size: 26p;
+}
+
+.img-logo{
+width: 18%;
+border-radius: 50%;
+}
+
+
+.caixa {
+	position: relative;
+	width: 740px;
+	margin: 0 auto;
+}
+
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
+}
+
+nav li {
+	display:inline-block;
+	padding: 0 8px;
 
 }
+
+nav a {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+	justify-content: space-between;
+}
+
+nav a:hover {
+	color: #a6a6bb;
+	text-decoration: underline;
+}
+
+
+
+
+.flex{
+    display: flex;
+}
+
+
+footer {
+	text-align: center;
+	background: url("bg.jpg");
+	padding-top: 40px;
+	padding-bottom: 40px;
+	font-size: 20px;
+}
+
+.img-footer{
+    width: 130px;
+    border-radius: 50%;
+}
+
+.copyright {
+	color: #0b023f;
+	font-size: 20px;
+	margin: 20px 0 0;
+}
+
+/*formulário*/
+
+form {
+	margin: 40px 0;
+}
+
+form label, form legend {
+	display:block;
+	font-size: 20px;
+	margin: 0 0 10px;
+}
+
+.input-padrao {
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
+}
+
+.checkbox {
+	margin: 20px 0;
+}
+
+.enviar {
+	width:40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+.enviar:hover {
+	background: rgb(5, 3, 156);
+	transform: scale(1.2);
+}
+
+table {
+	margin: 20px 0 40px;
+}
+
+thead {
+	background: #555555;
+	color: white;
+	font-weight: bold;
+}
+
+td, th {
+	border: 1px solid #000000;
+	padding: 8px 15px;
+}
+
+
+/* css da página inicial */
+.banner {
+	width:100%;
+}
+
+.titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
+	font-family: 'Macondo', cursive;
+}
+
+
+p {
+	font-family: 'Cormorant', serif;
+	font-size: 24px;
+}
+
+a {
+	font-family: 'Sono', sans-serif;
+}
+
+
+.principal {
+	padding: 3em 0;
+	width: 940px;
+	margin: 0 auto;
+}
+
+.principal p {
+	margin: 0 0 1em;
+}
+
+.principal strong {
+	font-weight: bold;
+}
+
+.principal em {
+	font-style: italic;
+}
+
+.quem-somos img {
+	display: flex;
+	width: 25%;
+	flex-wrap: wrap;
+	margin: 0 auto;
+	text-align: center;
+}
+
+
+.lista-quem-somos {
+	list-style: none;
+	display: flex;
+	justify-content: space-around;
+	margin-top: 30px;
+	padding: 40px;
+}
+
+
+.images {
+	width: 320px;
+    height: 320px;
+	float: left;
+	margin: 0 20px 20px 0;
+	box-shadow: 10px 5px 5px rgb(54, 53, 54);
+    
+}
+
+.images .principal:hover{
+    transition: ease-out;
+}
+
+.cursos {
+	padding: 3em 0;
+	background: linear-gradient(#f3f3f5, #d1d1da, #f6f6f8);
+	
+}
+
+.conteudo-cursos {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-cursos {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+	font-family: 'Sono', sans-serif;
+	font-size: 20px;
+
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
+.imagem-cursos {
+	width: 60%;
+	box-shadow: 10px 5px 5px rgb(75, 62, 151);
+}
+
+.video {
+	width: 560px;
+	margin: 2em auto;
+}
+
+
+@media screen and (max-width: 820px){
+	.caixa, .principal, .conteudo-beneficios, .video{ /*mudar a largura do video no iframe html*/
+		width: auto;
+	}
+
+	.input-padrao{
+		width: 100%;
+	}
+	
+	nav, h1{
+		text-align: center;
+	}
+
+	nav{
+		position: static;
+	}
+
+}
+
+
+/*about*/
+
+
+.about p {
+    padding: 2px;
+  }
+  
+  .main {
+    padding-bottom: 70px;
+  }
+  
+  .nurse {
+    padding: 50px 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .nurse img {
+    width: 45%;
+  }
+  
+  .nurse-profile-1 {
+    width: 45%;
+    text-align: end;
+  }
+  
+  .nurse-profile-2 {
+    width: 45%;
+  }
+  
+  .nurse p {
+    text-align: justify;
+  }
+  
+  .nurse h2 {
+    padding-bottom: 15px;
+  }
+  
+  .about-nurse {
+    font-size: 1em;
+    color: #555555;
+    padding-top: 10px;
+  }
+  
+  .main {
+    background-color: #f3f2f2;
+    padding: 30px 0;
+  }
+
+  h2 {
+    color: #676666;
+    padding-bottom: 2px;
+    text-transform: uppercase;
+  }
+  
+  p {
+    font-size: 1.2em;
+    line-height: 2em;
+    color: #a19f9f;
+  }
+  
