--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,86 +57,8 @@ nav a:hover {
 }
 
 
-
-
 .flex{
     display: flex;
-}
-
-
-footer {
-	text-align: center;
-	background: url("bg.jpg");
-	padding-top: 40px;
-	padding-bottom: 40px;
-	font-size: 20px;
-}
-
-.img-footer{
-    width: 130px;
-    border-radius: 50%;
-}
-
-.copyright {
-	color: #0b023f;
-	font-size: 20px;
-	margin: 20px 0 0;
-}
-
-/*formulário*/
-
-form {
-	margin: 40px 0;
-}
-
-form label, form legend {
-	display:block;
-	font-size: 20px;
-	margin: 0 0 10px;
-}
-
-.input-padrao {
-	display: block;
-	margin: 0 0 20px;
-	padding: 10px 25px;
-	width: 50%;
-}
-
-.checkbox {
-	margin: 20px 0;
-}
-
-.enviar {
-	width:40%;
-	padding: 15px 0;
-	background: orange;
-	color: white;
-	font-weight: bold;
-	font-size: 18px;
-	border: none;
-	border-radius: 5px;
-	transition: 1s all;
-	cursor: pointer;
-}
-
-.enviar:hover {
-	background: rgb(5, 3, 156);
-	transform: scale(1.2);
-}
-
-table {
-	margin: 20px 0 40px;
-}
-
-thead {
-	background: #555555;
-	color: white;
-	font-weight: bold;
-}
-
-td, th {
-	border: 1px solid #000000;
-	padding: 8px 15px;
 }
 
 
@@ -252,26 +174,6 @@ a {
 }
 
 
-@media screen and (max-width: 820px){
-	.caixa, .principal, .conteudo-beneficios, .video{ /*mudar a largura do video no iframe html*/
-		width: auto;
-	}
-
-	.input-padrao{
-		width: 100%;
-	}
-	
-	nav, h1{
-		text-align: center;
-	}
-
-	nav{
-		position: static;
-	}
-
-}
-
-
 /*about*/
 
 
@@ -290,7 +192,7 @@ a {
   }
   
   .nurse img {
-    width: 45%;
+    width: 480px;
   }
   
   .nurse-profile-1 {
@@ -333,3 +235,115 @@ a {
     color: #a19f9f;
   }
   
+
+  /*formulário contato*/
+
+ 
+.w50{
+    width: 50%;
+    float: left;
+    padding-right: 15px;
+}
+.box{
+    display: flex;
+    width: 930px;
+}
+.img-box{
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 50%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    border-radius: 20px  0 0 20px;
+}
+.img-box {
+    width: 560px;
+   margin-bottom: 16em;
+}
+
+.form-box{
+    background-color: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(40px);
+    padding: 30px 40px;
+    width: 50%;
+    border-radius: 0 20px 20px 0;
+}
+
+.form-box h2{
+    font-size: 30px;
+}
+
+.form-box p{
+    font-weight: bold;
+    color: #3D3D3D;
+}
+.form-box p a{
+    color: #1b182b;
+    text-decoration: none;
+}
+
+.form-box form{
+    margin: 20px 0;
+}
+
+form .input-group{
+    margin-bottom: 15px;
+}
+
+form .input-group label{
+    color: #3D3D3D;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+form .input-group input{
+    width: 100%;
+    height: 47px;
+    background-color: rgba(255, 255, 255, 0.32);
+    border-radius: 20px;
+    outline: none;
+    border: 2px solid transparent;
+    padding: 15px;
+    font-size: 15px;
+    color: #616161;
+    transition: all 0.4s ease;
+}
+
+form .input-group input:focus{
+    border-color: #2b2a2a69;
+}
+
+form .input-group button{
+    width: 100%;
+    height: 47px;
+    background: #3b3b3b;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    margin-top: 15px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+
+/*footer*/
+
+footer {
+	text-align: center;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	font-size: 20px;
+}
+
+.img-footer{
+    width: 130px;
+    border-radius: 50%;
+}
+
+.copyright {
+	color: #0b023f;
+	font-size: 20px;
+	margin: 20px 0 0;
+}
